--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs",
-    "docs:cibuild": "cd docs || true;curl https://raw.githubusercontent.com/nios-students/helper_scripts/refs/heads/main/build.sh | bash"
+    "docs:cibuild": "cd docs || true;curl https://raw.githubusercontent.com/nios-students/helper_scripts/refs/heads/main/build.sh | bash",
+    "docs:quickrun": "cd docs || true;curl https://raw.githubusercontent.com/nios-students/helper_scripts/refs/heads/main/build.sh | bash; cd ..; npm run docs:dev"
   },
   "devDependencies": {
     "markdown-it-mathjax3": "^4.3.2",
